local/portal/k8s/edge-local-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-nginx
spec:
  template:
    spec:
