local/portal/k8s/minio-local-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  strategy: {type: Recreate, rollingUpdate: null}
  template:
    spec:
      nodeSelector: {kubernetes.io/hostname: tailwind-local-worker}
